tests/ui/spirv-attr/bad-deduce-storage-class.stderr
error: storage class mismatch
 --> $DIR/bad-deduce-storage-class.rs:8:5
  |
8 |     #[spirv(uniform)] error: &Image!(2D, type=f32),
  |     ^^^^^^^^-------^^^^^^^^^^---------------------
  |             |                |
  |             |                `UniformConstant` deduced from type
  |             `Uniform` specified in attribute
  |
  = help: remove storage class attribute to use `UniformConstant` as storage class

warning: redundant storage class attribute, storage class is deduced from type
 --> $DIR/bad-deduce-storage-class.rs:9:13
  |
9 |     #[spirv(uniform_constant)] warning: &Image!(2D, type=f32),
  |             ^^^^^^^^^^^^^^^^

error: entry parameter type must be by-reference: `&spirv_std::image::Image<f32, 1, 2, 0, 0, 0, 0, 4>`
  --> $DIR/bad-deduce-storage-class.rs:15:27
   |
15 | pub fn issue_585(invalid: Image!(2D, type=f32)) {}
   |                           ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `Image` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors; 1 warning emitted

